--- a/index.html
+++ b/index.html
@@ -233,15 +233,13 @@
 						<select id=material>
 							<option value>Выберите материал картины</option>
 							<option value="1"
-							<option>Выберите материал картины</option>
-							<option
 								title="Изящный, позволяет легко создавать текстуру, подходит для декоративных картин маслом.">
 								Холст из волокна</option>
 							<option value="1.2"
 								title="Достаточно грубый и создает ощущение реальности, подходит для классических пейзажей, натюрмортов и портретов.">
 								Льняной холст</option>
-							<option value="1.5" title="Изящный, подходит для всех типов реалистичных портретов.">Холст из
-							<option title="Изящный, подходит для всех типов реалистичных портретов.">Холст из
+							<option value="1.5" title="Изящный, подходит для всех типов реалистичных портретов.">Холст
+								из
 								натурального хлопка
 							</option>
 						</select>
