--- a/index.html
+++ b/index.html
@@ -269,44 +269,44 @@
 			<div class=p-heading>Примеры работ</div>
 			<h2>Для кого делаем портрет?</h2>
 			<ul class=portfolio-menu>
-				<li class="all active">Все работы</li>
-				<li class=lovers>Для влюбленных</li>
-				<li class=chef>Для шефа</li>
-				<li class=girl>Для девушки</li>
-				<li class=guy>Для парня</li>
-				<li class=grandmother>Для бабушки</li>
-				<li class=granddad>Для дедушки</li>
+				<li data-id="all">Все работы</li>
+				<li data-id="lovers">Для влюбленных</li>
+				<li data-id="chef">Для шефа</li>
+				<li data-id="girl">Для девушки</li>
+				<li data-id="guy">Для парня</li>
+				<li data-id="grandmother">Для бабушки</li>
+				<li data-id="granddad">Для дедушки</li>
 			</ul>
 		</div>
 		<div class=portfolio-wrapper>
-			<div class="portfolio-block all girl">
+			<div data-id="portfolio-block all girl">
 				<img src=./src/assets/img/portfolio-1.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div data-id="portfolio-block all girl">
 				<img src=./src/assets/img/portfolio-2.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div data-id="portfolio-block all lovers">
 				<img src=./src/assets/img/portfolio-3.jpg alt>
 			</div>
-			<div class="portfolio-block all guy">
+			<div data-id="portfolio-block all guy">
 				<img src=./src/assets/img/portfolio-4.jpg alt>
 			</div>
-			<div class="portfolio-block all chef">
+			<div data-id="portfolio-block all chef">
 				<img src=./src/assets/img/portfolio-5.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div data-id="portfolio-block all lovers">
 				<img src=./src/assets/img/portfolio-6.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div data-id="portfolio-block all lovers">
 				<img src=./src/assets/img/portfolio-7.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div data-id="portfolio-block all girl">
 				<img src=./src/assets/img/portfolio-8.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div data-id="portfolio-block all girl">
 				<img src=./src/assets/img/portfolio-9.jpg alt>
 			</div>
-			<div class="portfolio-block all chef">
+			<div data-id="portfolio-block all chef">
 				<img src=./src/assets/img/portfolio-10.jpg alt>
 			</div>
 		</div>
